--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,7 +25,7 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <!--<include layout="@layout/content_home" />-->
+        <include layout="@layout/content_home" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
