--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,12 +16,46 @@
 
     <include layout="@layout/content_main" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/fab"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom|end"-->
+        <!--android:layout_margin="@dimen/fab_margin"-->
+        <!--android:src="@drawable/ic_action_name" />-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_action_name" />
+        android:background="@color/colorPrimary">
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:id="@+id/cancel"
+            android:layout_weight="1"
+            android:src="@drawable/ic_cancel"
+            android:padding="7dp"/>
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:id="@+id/rotateleft"
+            android:layout_weight="1"
+            android:src="@drawable/ic_rotateleft"
+            android:padding="7dp"/>
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:id="@+id/rotateright"
+            android:layout_weight="1"
+            android:src="@drawable/ic_rotateright"
+            android:padding="7dp"/>
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:id="@+id/submit"
+            android:layout_weight="1"
+            android:src="@drawable/ic_submit"
+            android:padding="7dp"/>
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
