--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -17,6 +17,6 @@
         <item
             android:id="@+id/logout"
             android:title="Exit"
-            android:icon="@drawable/ic_action_name"/>
+            android:icon="@drawable/ic_submit"/>
     </group>
 </menu>
