--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,7 +14,8 @@
             android:id="@+id/sourceFrame"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:padding="10dp">
 
             <ImageView
                 android:id="@+id/iv_show_img"
