--- a/app/src/main/res/layout/drawer_sample.xml
+++ b/app/src/main/res/layout/drawer_sample.xml
@@ -6,4 +6,4 @@
     android:choiceMode="singleChoice"
     android:divider="@android:color/transparent"
     android:dividerHeight="0dp"
-    tools:context="com.martin.opencv4android.NavigationDrawerFragment" />
+    tools:context="com.martin.opencv4android.HomeActivity" />
