--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="178dp"
     android:orientation="vertical"
-    android:background="@drawable/material_back"
+    android:background="@drawable/side_nav_bar_header"
     android:weightSum="1">
 
 
